create jupyter notebooks to enhance understanding

--- a/self-attention/simple_self_attention.ipynb
+++ b/self-attention/simple_self_attention.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple self-attention mechanism"
+    "# Simple self-attention mechanism\n",
+    "\n",
+    "in this demo just computate context vector *z(2)*"
    ]
   },
   {
