--- a/self-attention/simplified/simple_self_attention.ipynb
+++ b/self-attention/simplified/simple_self_attention.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple self-attention mechanism\n",
+    "# one row self-attention mechanism without treinables weights\n",
     "\n",
     "in this demo just computate context vector *z(2)*"
    ]
@@ -38,12 +38,22 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.9544, 1.4950, 1.4754, 0.8434, 0.7070, 1.0865])\n"
+     ]
+    }
+   ],
    "source": [
     "query = inputs[1]\n",
     "attn_scores_2 = torch.empty(inputs.shape[0])\n",
     "for i, x_i in enumerate(inputs):\n",
-    "   attn_scores_2[i] = torch.dot(x_i, query)"
+    "   attn_scores_2[i] = torch.dot(x_i, query)\n",
+    "\n",
+    "print(attn_scores_2)"
    ]
   },
   {
@@ -72,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
