--- a/self-attention/self_attention.ipynb
+++ b/self-attention/self_attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f600400c190>"
+       "<torch._C.Generator at 0x7ff3007bbf90>"
       ]
      },
      "execution_count": 5,
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +108,120 @@
     "\n",
     "print(\"keys.shape:\", keys.shape)\n",
     "print(\"values.shape:\", values.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.2705, 1.8524, 1.8111, 1.0795, 0.5577, 1.5440])\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_scores_2 = query_2 @ keys.T\n",
+    "print(attn_scores_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.1500, 0.2264, 0.2199, 0.1311, 0.0906, 0.1820])\n"
+     ]
+    }
+   ],
+   "source": [
+    "d_k = keys.shape[-1]\n",
+    "attn_weights_2 = torch.softmax(attn_scores_2 / d_k ** 0.5, dim=-1)\n",
+    "print(attn_weights_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.3061, 0.8210])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_vec_2 = attn_weights_2 @ values\n",
+    "print(context_vec_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generalizing to a separate class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2996, 0.8053],\n",
+      "        [0.3061, 0.8210],\n",
+      "        [0.3058, 0.8203],\n",
+      "        [0.2948, 0.7939],\n",
+      "        [0.2927, 0.7891],\n",
+      "        [0.2990, 0.8040]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from self_attention import SelfAttention_V1\n",
+    "\n",
+    "torch.manual_seed(123)\n",
+    "sa_v1 = SelfAttention_V1(d_in, d_out)\n",
+    "print(sa_v1(inputs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.0739,  0.0713],\n",
+      "        [-0.0748,  0.0703],\n",
+      "        [-0.0749,  0.0702],\n",
+      "        [-0.0760,  0.0685],\n",
+      "        [-0.0763,  0.0679],\n",
+      "        [-0.0754,  0.0693]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from self_attention import SelfAttention_V2\n",
+    "\n",
+    "torch.manual_seed(789)\n",
+    "sa_v2 = SelfAttention_V2(d_in, d_out)\n",
+    "print(sa_v2(inputs))"
    ]
   }
  ],
