--- a/self-attention/self_attention.ipynb
+++ b/self-attention/self_attention.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7ff3007bbf90>"
+       "<torch._C.Generator at 0x7f836ff4ac10>"
       ]
      },
      "execution_count": 5,
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -222,6 +222,293 @@
     "torch.manual_seed(789)\n",
     "sa_v2 = SelfAttention_V2(d_in, d_out)\n",
     "print(sa_v2(inputs))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Causal Attention Mask"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### intuitive way"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
+      "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "queries = sa_v2.W_query(inputs)\n",
+    "keys = sa_v2.W_key(inputs)\n",
+    "attn_scores = queries @ keys.T\n",
+    "attn_weights = torch.softmax(attn_scores / keys.shape[-1] ** 0.5, dim=-1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 0., 0., 0., 0., 0.],\n",
+      "        [1., 1., 0., 0., 0., 0.],\n",
+      "        [1., 1., 1., 0., 0., 0.],\n",
+      "        [1., 1., 1., 1., 0., 0.],\n",
+      "        [1., 1., 1., 1., 1., 0.],\n",
+      "        [1., 1., 1., 1., 1., 1.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_length = attn_scores.shape[0]\n",
+    "mask_simple = torch.tril(torch.ones(context_length, context_length))\n",
+    "print(mask_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.1921, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2041, 0.1659, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2036, 0.1659, 0.1662, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.1869, 0.1667, 0.1668, 0.1571, 0.0000, 0.0000],\n",
+      "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "masked_simple = attn_weights * mask_simple\n",
+    "print(masked_simple)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<DivBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "row_sums = masked_simple.sum(dim=-1, keepdim=True)\n",
+    "masked_simple_norm = masked_simple / row_sums\n",
+    "print(masked_simple_norm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### more efficiently in fewer steps\n",
+    "\n",
+    "this mode we use the mathematical property of the softmax function following this steps:\n",
+    "\n",
+    "Attention Scores (unnormalized) -> Masked Attention Scores (unnormalized) -> Masked Attention Weights (normalized)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
+      "        [0.4594, 0.1703, 0.1731,   -inf,   -inf,   -inf],\n",
+      "        [0.2642, 0.1024, 0.1036, 0.0186,   -inf,   -inf],\n",
+      "        [0.2183, 0.0874, 0.0882, 0.0177, 0.0786,   -inf],\n",
+      "        [0.3408, 0.1270, 0.1290, 0.0198, 0.1290, 0.0078]],\n",
+      "       grad_fn=<MaskedFillBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mask = torch.triu(torch.ones(context_length, context_length), diagonal=1)\n",
+    "masked = attn_scores.masked_fill(mask.bool(), -torch.inf)\n",
+    "print(masked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4483, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.3800, 0.3097, 0.3103, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.2758, 0.2460, 0.2462, 0.2319, 0.0000, 0.0000],\n",
+      "        [0.2175, 0.1983, 0.1984, 0.1888, 0.1971, 0.0000],\n",
+      "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
+      "       grad_fn=<SoftmaxBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "attn_weights = torch.softmax(masked / keys.shape[-1] ** 0.5, dim=1)\n",
+    "print(attn_weights)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2., 2., 2., 2., 2., 2.],\n",
+      "        [0., 2., 0., 0., 0., 0.],\n",
+      "        [0., 0., 2., 0., 2., 0.],\n",
+      "        [2., 2., 0., 0., 0., 2.],\n",
+      "        [2., 0., 0., 0., 0., 2.],\n",
+      "        [0., 2., 0., 0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "\n",
+    "dropout = torch.nn.Dropout(0.5)\n",
+    "example = torch.ones(6, 6)\n",
+    "print(dropout(example))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[2.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.8966, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.0000, 0.6206, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5517, 0.4921, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.4350, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.0000, 0.3327, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
+      "       grad_fn=<MulBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "print(dropout(attn_weights))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generalizing with causal attention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from causal_attention import CausalAttention"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 6, 3])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Simulate batch input\n",
+    "batch = torch.stack((inputs, inputs), dim=0)\n",
+    "print(batch.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "context_vecs.shape: torch.Size([2, 6, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(123)\n",
+    "context_length = batch.shape[1]\n",
+    "ca = CausalAttention(d_in, d_out, context_length, 0.0)\n",
+    "context_vecs = ca(batch)\n",
+    "print(\"context_vecs.shape:\", context_vecs.shape)"
    ]
   }
  ],
